--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>JS</title>
-</head>
-<body>
-    
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>Draggble Menu</title>
+  </head>
+  <body>
+    <nav>
+      <div class="nav-content">
+        <div class="toggle-btn">
+          <i class="fas fa-plus"></i>
+        </div>
+        <span style="--i:1">
+          <a href="#"><i class="fas fa-home"></i></a>
+        </span>
+        <span style="--i:2">
+          <a href="#"><i class="fas fa-camera"></i></a>
+        </span>
+        <span style="--i:3">
+          <a href="#"><i class="fas fa-alarm-clock"></i></a>
+        </span>
+        <span style="--i:4">
+          <a href="#"><i class="fas fa-map"></i></a>
+        </span>
+        <span style="--i:5">
+          <a href="#"><i class="fas fa-cog"></i></a>
+        </span>
+      </div>
+    </nav>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
